<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/txt_share"
        android:textSize="@dimen/tv_pop_window_size" />

    <TextView
        android:id="@+id/tv_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/txt_like"
        android:textSize="@dimen/tv_pop_window_size" />

    <TextView
        android:id="@+id/tv_add_to_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10dp"
        android:text="@string/txt_add_to_queue"
        android:textSize="@dimen/tv_pop_window_size" />

</LinearLayout>
