<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/_10dp"
        android:paddingRight="@dimen/_10dp">


        <ImageView
            android:id="@+id/iv_info_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/txt_cd"
            android:src="@drawable/icon_close" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_fev"
            style="@style/tv_info_dialog"
            android:text="@string/txt_add_to_favorites"
            android:textAllCaps="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@drawable/icon_divider" />

        <TextView
            android:id="@+id/tv_dialog_add_que"
            style="@style/tv_info_dialog"
            android:text="@string/txt_add_to_queue"
            android:textAllCaps="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:background="@drawable/icon_divider" />

        <TextView
            android:id="@+id/tv_dialog_share"
            style="@style/tv_info_dialog"
            android:text="@string/txt_share"
            android:textAllCaps="true" />
    </LinearLayout>

</LinearLayout>