<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_audio_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@drawable/bg_tab"
        android:paddingLeft="@dimen/_10dp"
        android:paddingRight="@dimen/_10dp">

        <TextView
            android:id="@+id/tv_info_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/txt_movie_details"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_tab_size" />

        <ImageView
            android:id="@+id/iv_info_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/txt_cd"
            android:src="@drawable/icon_close" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10dp">


            <!--GENRE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_genre"
                    style="@style/tv_movie_info_label"
                    android:text="@string/txt_genre" />

                <TextView
                    android:id="@+id/tv_info_genre_value"
                    style="@style/tv_movie_info_value" />
            </LinearLayout>

            <!--DIRECTOR-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_director"
                    style="@style/tv_movie_info_label"
                    android:text="@string/txt_director" />

                <TextView
                    android:id="@+id/tv_info_director_value"
                    style="@style/tv_movie_info_value" />
            </LinearLayout>

            <!--LANGUAGE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_language"
                    style="@style/tv_movie_info_label"
                    android:text="@string/txt_language" />

                <TextView
                    android:id="@+id/tv_info_language_value"
                    style="@style/tv_movie_info_value" />
            </LinearLayout>

            <!--MUSIC-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_music"
                    style="@style/tv_movie_info_label"
                    android:text="@string/txt_music" />

                <TextView
                    android:id="@+id/tv_info_music_value"
                    style="@style/tv_movie_info_value" />
            </LinearLayout>

            <!--PRODUCTION-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_producation"
                    style="@style/tv_movie_info_label"
                    android:text="@string/txt_production" />

                <TextView
                    android:id="@+id/tv_info_producation_value"
                    style="@style/tv_movie_info_value" />
            </LinearLayout>

            <!--CAST-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_cast"
                    style="@style/tv_movie_info_label"
                    android:text="@string/txt_cast" />

                <TextView
                    android:id="@+id/tv_info_cast_value"
                    style="@style/tv_movie_info_value" />
            </LinearLayout>


            <!--SYNOPSIS-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_info_synopsis"
                    style="@style/tv_movie_info_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_synopsis" />

                <TextView
                    android:id="@+id/tv_info_synopsis_value"
                    style="@style/tv_movie_info_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>