<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@color/colorPrimary"
        android:paddingLeft="@dimen/_10dp"
        android:paddingRight="@dimen/_10dp">

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_now_playing"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_toolbar_title_size" />

        <ImageView
            android:id="@+id/iv_now_playing_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/txt_cd"
            android:src="@drawable/icon_close" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animationCache="false"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none"
            android:scrollingCache="false"
            android:smoothScrollbar="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_no_result"
            style="@style/tv_no_result"
            android:text="@string/txt_no_data"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>
