<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/border_dialog_main"
    android:orientation="vertical">


    <include layout="@layout/layout_include_dialog_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/txt_cd"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />


    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_dialog_height"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_dialog_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/txt_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <View
            android:layout_width="@dimen/divider_line_height"
            android:layout_height="wrap_content"
            android:background="@color/divider_line" />


        <Button
            android:id="@+id/btn_dialog_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/txt_ok"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>

</LinearLayout>