<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_bottom_strip">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/icon_with"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/icon_player"
            android:layout_width="@dimen/icon_with"
            android:layout_height="@dimen/icon_with"
            android:contentDescription="@string/txt_cd" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_current_music_notification"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:lines="1"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:requiresFadingEdge="horizontal"
                    android:scrollHorizontally="true"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />


                <TextView
                    android:id="@+id/txt_duration_notification"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:ellipsize="marquee"
                    android:gravity="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@string/txt_empty_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.9"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btn_prev_notification"
                        android:layout_width="@dimen/touch_default"
                        android:layout_height="@dimen/touch_default"
                        android:layout_marginEnd="@dimen/_40dp"
                        android:layout_toStartOf="@+id/btn_play_notification"
                        android:background="@drawable/ic_previous_white"
                        android:contentDescription="@string/txt_cd" />

                    <ImageButton
                        android:id="@+id/btn_play_notification"
                        android:layout_width="@dimen/touch_default"
                        android:layout_height="@dimen/touch_default"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_play_white"
                        android:contentDescription="@string/txt_cd" />


                    <ImageButton
                        android:id="@+id/btn_next_notification"
                        android:layout_width="@dimen/touch_default"
                        android:layout_height="@dimen/touch_default"
                        android:layout_marginStart="@dimen/_40dp"
                        android:layout_toEndOf="@+id/btn_play_notification"
                        android:background="@drawable/ic_next_white"
                        android:contentDescription="@string/txt_cd" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_notification_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/txt_cd"
                    android:src="@drawable/ic_menu_close"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</FrameLayout>