<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_player_dark"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txt_current_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp">

            <TextView
                android:id="@+id/txt_current_duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/txt_empty_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size" />


            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxHeight="7dp"
                android:minHeight="7dp"
                android:progressDrawable="@drawable/seekbar_progress"
                android:thumb="@color/transparent" />

            <TextView
                android:id="@+id/txt_total_duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/txt_empty_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="-5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">


                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/fl_play"
                    android:background="@color/transparent"
                    android:contentDescription="@string/txt_cd"
                    android:src="@drawable/icon_playlist_next_active" />


                <FrameLayout
                    android:id="@+id/fl_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp">

                    <ImageButton
                        android:id="@+id/btn_play"
                        android:layout_width="@dimen/iv_play_h_w"
                        android:layout_height="@dimen/iv_play_h_w"
                        android:layout_gravity="center"
                        android:background="@drawable/icon_player_play"
                        android:contentDescription="@string/txt_cd" />

                    <ProgressBar
                        android:id="@+id/progress_bar_player"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="@dimen/iv_play_h_w"
                        android:layout_height="@dimen/iv_play_h_w"
                        android:padding="@dimen/_5dp"
                        android:visibility="gone" />

                </FrameLayout>


                <ImageButton
                    android:id="@+id/btn_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/fl_play"
                    android:background="@color/transparent"
                    android:contentDescription="@string/txt_cd"
                    android:src="@drawable/icon_player_prev_active" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_play_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/txt_cd"
                android:src="@drawable/icon_player_playlist" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
